# campus-agent

./: .codex-bootstrap  .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  PROJECT_SPEC.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: Dockerfile  __init__.py  alembic.ini
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py  graph.py  grounded_llm.py  planning.py  policies.py  state.py
backend/app/api/: auth.py  chat.py  evals.py  health.py  ingest.py  memory.py  posts.py  providers.py  search.py  sessions.py
backend/migrations/: README.md
docs/: agent-flow.md  api.md  architecture.md  demo-script.md  eval.md  memory.md  progress.md  retrieval.md  security.md
evals/: run_eval.py
evals/datasets/: intent_80.jsonl  qa_14.jsonl  retrieval_18.jsonl
evals/reports/: eval-32d36987b2.json  eval-32d36987b2.md  eval-4d42b39c8f.json  eval-4d42b39c8f.md  eval-697180b739.json  eval-6afc0d6cb2.json  eval-6afc0d6cb2.md  eval-7dfc3e46b9.json  eval-7dfc3e46b9.md  eval-acaa8777bf.json  eval-acaa8777bf.md  eval-d4a315b805.json  eval-d4a315b805.md  latest.json  latest.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js  styles.css
frontend/tests/: lint.mjs  run.mjs  typecheck.mjs
infra/alertmanager/: Dockerfile  alertmanager.yml
infra/grafana/: Dockerfile
infra/prometheus/: Dockerfile  prometheus.yml  rules.yml
scripts/: __init__.py  healthcheck.py  migrate.py  seed.py  smoke.py
(+78 files in other folders)
