git: warning: confstr() failed with code 5: couldn't get path of DARWIN_USER_TEMP_DIR; using /tmp instead
[project]
name = "campusflow-ai"
version = "0.1.0"
description = "Python-first campus community agent with Hybrid RAG, GraphRAG, multimodal search, memory, evals, and observability."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<0.117",
  "uvicorn[standard]>=0.30,<0.32",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "sqlalchemy>=2.0,<2.1",
  "psycopg[binary]>=3.2,<3.3",
  "alembic>=1.13,<1.14",
  "redis>=5.0,<5.1",
  "neo4j>=5.22,<5.26",
  "rank-bm25>=0.2,<0.3",
  "prometheus-client>=0.20,<0.22",
  "opentelemetry-api>=1.25,<1.28",
  "langgraph>=0.2,<0.3",
  "python-multipart>=0.0.9,<0.0.10",
  "httpx>=0.27,<0.28",
  "cryptography>=43,<45"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<8.4",
  "pytest-asyncio>=0.23,<0.25",
  "ruff>=0.6,<0.7",
  "mypy>=1.10,<1.12",
  "types-redis>=4.6,<4.7"
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B"]
ignore = ["E501", "E402", "F401", "B905"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
